deployment/proxy/envoy.yaml


static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0  # リッスンするIPアドレス
        port_value: 8081  # リッスンするポート番号
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO # AUTO or HTTP1 or HTTP2
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/api/insight/v1"  # API Version
                route:
                  cluster: insight_tracer_cluster
          http_filters:
          - name: envoy.filters.http.router
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/tmp/access.log" # 開発環境用デバッグ アクセスログの出力先
  clusters:
  - name: insight_tracer_cluster
    connect_timeout: 60s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: insight-tracer  # アップストリームサービスのホスト名
        port_value: 8080     # アップストリームサービスのポート番号

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9900
